@@ -1,14 +1,8 @@
-public void registerUuidToHexUdf(SparkSession spark) {
-    spark.udf().register("uuidToHex", (UDF1<String, String>) uuidStr -> {
-        UUID uuid = UUID.fromString(uuidStr);
-        return uuid.toString().replace("-", "").toUpperCase();
-    }, DataTypes.StringType);
 
-    spark.udf().register("uuidToBytes", (UDF1<String, byte[]>) uuidStr -> {
-        UUID uuid = UUID.fromString(uuidStr);
-        ByteBuffer bb = ByteBuffer.wrap(new byte[16]);
-        bb.putLong(uuid.getMostSignificantBits());
-        bb.putLong(uuid.getLeastSignificantBits());
-        return bb.array();
-    }, DataTypes.BinaryType);
+tasks.withType(JavaExec).configureEach {
+	jvmArgs += [
+			"--add-exports", "java.base/sun.util.calendar=ALL-UNNAMED",
+            "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED",
+			"--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
+	]
 }
